@@ -1,3 +1,8 @@
+2006-05-29  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* TestImageFormatConverter.cs: Added test cases for all well known
+	ImageFormat short and long names using ConvertFrom.
+
 2006-05-26  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* TestColor.cs: Added test cases for serialization. Currently we can't
